--- a/styles/blog.css
+++ b/styles/blog.css
@@ -3,3 +3,9 @@ div{
     padding: 10px;
     margin: 10px;
 }
+ul{
+    color: rgb(47, 0, 255);
+    background-color: aqua;
+    padding: 10px;
+    margin: 10px;
+}
